[package]
name = "vasko"
version = "0.1.0"
edition = "2021"

[dependencies]
knuffel = "=3.2.0"
slack-morphism = { version = "2.4.1", features = ["hyper", "axum"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
chrono = "0.4.38"
thiserror = "1.0.63"
humantime = "2.1.0"
url = "2.5.2"
roux = "2.2.13"


